--- a/environmentalsubcalculators.html
+++ b/environmentalsubcalculators.html
@@ -846,6 +846,7 @@
                    <a href="secondaryfluidinlettemperatureatanyload.html" class="calculator-btn">Secondary Fluid Inlet Temperature At Any Load Calculator</a>
                    <a href="thesecondaryinlettemprature.html" class="calculator-btn">Secondary Inlet Temperature At Any Load Calculator</a>
                    <a href="calculatingthestallloadwithavaraibleflow.html" class="calculator-btn">Stall Load For A Variable Flow Secondary Calculator</a>
+                   <a href="shorttermcorrosionrate.html" class="calculator-btn">Short-Term Corrosion Rate (STCR) Calculator</a>
 
 
             
@@ -858,6 +859,7 @@
             <a href="resistivityfromconductivity.html" class="calculator-btn">Thermal Resistivity From Conductivity Calculator</a>
             <a href="totaldissolvedsolids.html" class="calculator-btn">TDS Calculator (Density Method)</a>
             <a href="tdsconductivitymethod.html" class="calculator-btn">TDS (Total Dissolved Solids) Conductivity Calculator</a>
+            <a href="transientmassbalance.html" class="calculator-btn">Transient Mass Balance Calculator</a>
             <a href="massflowratefromvelocity.html" class="calculator-btn">Mass Flow Rate From Velocity Calculator</a>
             
             <a href="vaporpressurecalculator.html" class="calculator-btn">Vapor Pressure Calculator</a>
