--- a/healthsubcalculators.html
+++ b/healthsubcalculators.html
@@ -770,6 +770,9 @@
             <a href="bmrcalculator.html" class="calculator-btn">Basal Metabolic Rate (BMR) Calculator</a>
             <a href="bodyfatcalcualtor.html" class="calculator-btn">Body Fat Calculator (U.S. Navy Method)</a>
             <a href="baicalculator.html" class="calculator-btn">Body Adiposity Index (BAI) Calculator</a>
+            <a href="bodyframesizecalcualtor.html" class="calculator-btn">Body Frame Size Calculator</a>
+
+
 
 
             
@@ -787,12 +790,21 @@
             <a href="heavinessofsmokingindex.html" class="calculator-btn">Heaviness of Smoking Index (HSI) Calculator</a>
 
             <a href="idealweightcalcualtor.html" class="calculator-btn">Ideal Weight Calculator</a>
+            <a href="karvonenformulacalculator.html" class="calculator-btn">Karvonen Formula Calculator</a>
+            <a href="leanbodymass.html" class="calculator-btn">Lean Body Mass (LBM) Calculator</a>
+            <a href="lillescorecalculator.html" class="calculator-btn">Lille Score Calculator for Alcoholic Hepatitis</a>
+
+
+
+
 
 
             <a href="noiseexposturelevel.html" class="calculator-btn">Noise Exposure Level (Leq) Calculator</a>
             
             <a href="proteinintakecalcualtor.html" class="calculator-btn">Protein Intake Calculator</a>
             <a href="ponderalindexcal.html" class="calculator-btn">Ponderal Index (PI) Calculator</a>
+            <a href="sleepcalculator.html" class="calculator-btn">Sleep Calculator</a>
+
 
 
 
