--- a/safetysubcalculators.html
+++ b/safetysubcalculators.html
@@ -758,7 +758,9 @@
         <div class="button-container" id="calculatorList">
             <a href="accidentrate.html" class="calculator-btn">Accident Rate Calculator</a>
             <a href="averageresolutiontimecalculator.html" class="calculator-btn">Average Resolution Time (ART) Calculator</a>
+            <a href="averagethicknessforcorroded.html" class="calculator-btn">Averaging Thickness for Corroded Areas</a>
             <a href="allowableleakagecalculation.html" class="calculator-btn">Allowable Leakage and Additional Leakage Calculation</a>
+
 
             <a href="steamflowarea.html" class="calculator-btn">AD-Merkblatt valves - Minimum flow area for steam</a>
             <a href="safetycalculatorminimumflowarea.html" class="calculator-btn">AD-Merkblatt valves - Minimum flow area for Dry Gases And Air</a>
@@ -897,6 +899,7 @@
             <a href="motorvechilecrashrate.html" class="calculator-btn">Motor Vehicle Crash Rate (MVCR) Calculator</a>
             <a href="motorvechiclefrequencyrate.html" class="calculator-btn">Motor Vehicle Crash Frequency Rate Calculator</a>
             <a href="meandifferentialtempraturebetweenprimaryandsecondary.html" class="calculator-btn">Mean Temperature Difference B/W Primary and secondary Fluid Calculator</a>
+            <a href="maximuminspectionalinterval.html" class="calculator-btn">Maximum Inspection Interval Calculator</a>
 
 
 
@@ -917,6 +920,7 @@
 
             <a href="pressuredrop.html" class="calculator-btn">Pressure Drop Calculator</a>
             <a href="pressuredropacrossasteamvalve.html" class="calculator-btn">Pressure Drop Across A Steam Valve  Calculator</a>
+            <a href="pitarea.html" class="calculator-btn">Pit Area Calculation</a>
 
           
            
@@ -931,7 +935,8 @@
 
             <a href="reactionforceattheendofsafetyvalveventpipe.html" class="calculator-btn">Reaction Force at the end of Safety Valve Calculator</a>
 
-            <a href="remaininglife.html" class="calculator-btn">Remaining Corrosion Life Calculator</a>
+            <a href="remaininglife.html" class="calculator-btn">Remaining Corrosion Life Calculator (1)</a>
+            <a href="remaincorrosionlife.html" class="calculator-btn">Remaining Corrosion Life Calculator (2)</a>
 
 <a href="remainingcorrosionallowance.html" class="calculator-btn">Remaining Corrosion Allowance Calculator</a>
 
